--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,11 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+
+  
 }
 
 .profile-image {
@@ -35,6 +40,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  
 }
 
 a {
@@ -45,4 +51,25 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin:0;
+  padding:0;
+
+  gap:16px;
+
+  
+
+}
+.left{
+  display: flex;
+  align-items: center;
+  gap:16px;
+}
+
+
+.right{
+  display: flex;
+  align-items: center;
+  gap:16px;
+  
 }
