Add a container and properties
Having two main containers will display
the content in the order I want and the properties
help to make the containers flexible

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -67,3 +67,24 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+/*solution*/
+.icon{
+  flex-shrink: 0;
+}
+.modal{
+  display: flex;
+  gap: 15px;
+  padding:15px;
+}
+.header{
+  display: flex;
+  justify-content: space-between;
+  font-weight:bold;
+  font-size: 17px;
+  margin-bottom: 8px;
+  
+
+}
+.text{
+  margin-bottom: 16px;
+}
