--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -24,3 +24,60 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+
+
+/*solution*/
+body{
+  display: flex;
+  flex-direction: column;
+
+}
+.content{
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: auto;
+  gap: 16px;
+
+}
+.header{
+  display: flex;
+  justify-content: space-between;
+  
+
+}
+.footer{
+  display: flex;
+  justify-content: space-between;
+  background-color: #eeee;
+  margin-top: auto;
+}
+
+a{
+  text-decoration:none;
+  color: gray;
+
+}
+.left-links{
+  list-style-type: none;
+  display: flex;
+  gap: 16px;
+  padding-left: 16px;
+
+}
+.right-links{
+  list-style-type: none;
+  display: flex;
+  padding-right: 16px;
+  gap: 16px;
+
+}
+
+button{
+  padding: 8px 16px;
+}
+
+
+
