--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -8,22 +8,93 @@ body {
   height: 72px;
   background: darkmagenta;
   color: white;
+
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+
+}
+/*solution*/
+body{
+  display: flex;
+  flex-direction: column;
+
+}
+.header{
+  font-size: 32px;
+  font-weight:900;
+  display: flex;
+  align-items: center;
+  padding-left: 16px; 
+
+}
+.footer{
+  display: flex;
+  margin-top: auto;
+  justify-content: center;
+  align-items: center;
+
+}
+
+a{
+  text-decoration: none;
+  color:white;
+  font-size: 24px;
+
+  
+}
+
+
+.sidebar ul{
+  list-style-type:none;
+  margin:0;
+  
+
+}
+.card{
+  width:300px;
+  
+  padding:16px;
+  margin: 10px;
+
+  
+}
+.cards{
+  display: flex;
+  flex-wrap: wrap;
+  padding:48px;
+  
+}
+.main{
+  display: flex;
+  flex-grow: 1;
+}
+.sidebar{
+  
+  flex-shrink: 0;
+  
+}
+.sidebar ul{
+  padding-left:0;
+  
+}
+li{
+  padding: 16px;
 }
